# R-Type

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  reinstall.sh
.engine/: Makefile
.engine/src/: main.cpp
.engine/src/Entity/: Entity.cpp  Entity.hpp
.engine/src/Factory/: Factory.hpp
.engine/src/SceneManager/: Scene.hpp  SceneManager.cpp  SceneManager.hpp
annimations/: Animation.hpp
client/UDPClient/: UDPClient.cpp  UDPClient.hpp
client/engine/include/: types.hpp
client/engine/include/ecs/component/: ComponentManager.hpp
client/engine/include/ecs/entity/: EntityManager.hpp
client/engine/include/ecs/system/: SystemManager.hpp
client/engine/include/exception/: ChangeScene.hpp  Exception.hpp
client/engine/include/game/: Game.hpp
client/engine/src/ecs/component/: ComponentManager.cpp
client/engine/src/ecs/entity/: EntityManager.cpp
client/engine/src/ecs/system/: SystemManager.cpp
client/engine/src/exception/: Exception.cpp
client/engine/src/game/: Game.cpp
client/game/include/: scenes.hpp
client/game/resources/audio/: SoundPlayer.cpp  SoundPlayer.hpp
client/game/src/: main.cpp
client/game/src/components/: Boss.cpp  Button.cpp  Enemy1.cpp  MobSpawner.cpp  Parallax.cpp  Player.cpp  Rocket.cpp  RocketEnemy.cpp  Slider.cpp  Sprite.cpp  Text.cpp  Textarea.cpp
client/game/src/scenes/: connect_menu.cpp  game_loop.cpp  game_over.cpp  htp_menu.cpp  lobby_menu.cpp  main_menu.cpp  settings_menu.cpp
common/Serializer/: Serializer.cpp  Serializer.hpp
common/UdpPacket/: UdpPacket.hpp
documentation/: README.md  RFC.txt
documentation/R-Type-Client/html/: _change_scene_8hpp_source.html  _component_manager_8hpp_source.html  _entity_manager_8hpp_source.html  _exception_8hpp_source.html  _game_8hpp_source.html  _sound_player_8hpp_source.html  _system_manager_8hpp_source.html  _u_d_p_client_8hpp_source.html  annotated.html  class_indie_1_1_utils_1_1_sound_player-members.html  class_indie_1_1_utils_1_1_sound_player.html  classes.html  classgame_1_1_component_manager-members.html  classgame_1_1_component_manager.html  classgame_1_1_entity_manager-members.html  classgame_1_1_entity_manager.html  classgame_1_1_exception-members.html  classgame_1_1_exception.html  classgame_1_1_exception__coll__graph.dot  classgame_1_1_game-members.html  classgame_1_1_game.html  classgame_1_1_system_manager-members.html  classgame_1_1_system_manager.html  classgame_1_1exception_1_1_change_scene-members.html  classgame_1_1exception_1_1_change_scene.html  classgame_1_1exception_1_1_change_scene__coll__graph.dot  classrty_1_1network_1_1_client-members.html  classrty_1_1network_1_1_client.html  dir_0160a081660fac99463257e7e9e0bd03.html  dir_038e29cc0ca4b13ecc11bdda9403a30d.html  dir_23b047a036896c50c6eb906b7c280106.html  dir_287940765725bedbd26f84a79aaa3e47.html  dir_3f8315192904255f2bd3453e0fee5a42.html  dir_42c9c804befac60c6d0ee85bd1f1a7e4.html  dir_43956d444df3bfadbef40a1b57be198d.html  dir_491a23de32bf3c3bf745ef2cccb325ee.html  dir_5cbd8fb9911f2bcf7750f1641141f78e.html  dir_64d8404f920ced3537b0edbe252798b5.html  dir_68f24a5f10f51a4f80fea05929e546d8.html  dir_6a466538a668333233ce89f0f659fce2.html  (+68 more)
documentation/R-Type-Client/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js
documentation/R-Type-Client/latex/: annotated.tex  class_indie_1_1_utils_1_1_sound_player.tex  classgame_1_1_component_manager.tex  classgame_1_1_entity_manager.tex  classgame_1_1_exception.tex  classgame_1_1_exception.tex.tmp  classgame_1_1_exception__coll__graph.dot  classgame_1_1_game.tex  classgame_1_1_system_manager.tex  classgame_1_1exception_1_1_change_scene.tex  classgame_1_1exception_1_1_change_scene__coll__graph.dot  classrty_1_1network_1_1_client.tex  hierarchy.tex  refman.tex  structbutton__s.tex  structenemy1__s.tex  structgame_1_1vector2f.tex  structgame_1_1vector2i.tex  structmusic__s.tex  structparallax__s.tex  structplayer__s.tex  structrocket__s.tex  structrocket_enemy__s.tex  structslider__s.tex  structsprite__s.tex  structtext__s.tex  structtextarea__s.tex
documentation/R-Type-Server/html/: _server_8hpp_source.html  _u_d_p_server_8hpp_source.html  annotated.html  classes.html  classrty_1_1server_1_1_server-members.html  classrty_1_1server_1_1_server.html  classrty_1_1server_1_1network_1_1_udp_server-members.html  classrty_1_1server_1_1network_1_1_udp_server.html  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_a063914ab482288b7b0e1b2fca86158c.html  dir_a597f5bb3a777f9fa1caaf2761622489.html  dir_a9b163dddce7585ec47e7919d08fdd2e.html  doxygen.css  files.html  graph_legend.html  index.html
documentation/R-Type-Server/html/search/: all_0.js  all_1.js  classes_0.js  classes_1.js  search.css
documentation/R-Type-Server/latex/: annotated.tex  classrty_1_1server_1_1_server.tex  classrty_1_1server_1_1network_1_1_udp_server.tex  refman.tex
menu/: Makefile  main.cpp
menu/includes/: Main.hpp  Rtype.hpp
menu/includes/Exceptions/: Exception.hpp
menu/includes/Menus/: AMenu.hpp  CreateRoom.hpp  HtpMenu.hpp  IMenu.hpp  JoinRoom.hpp  MainMenu.hpp  Play.hpp  RoomManagement.hpp  SettingsMenu.hpp
menu/src/Exception/: Exception.cpp
menu/src/Menus/: AMenu.cpp  CreateRoom.cpp  HtpMenu.cpp  JoinRoom.cpp  MainMenu.cpp  Play.cpp  RoomManagement.cpp  SettingsMenu.cpp
server/src/: main.cpp
server/src/Server/: Server.cpp  Server.hpp
server/src/UDPServer/: UDPServer.cpp  UDPServer.hpp
